Encountered a super annoying bug that is still not resolved. Tried adding a hover effect to my close button on the modal, but I realized that curor effects were interfering. Additionally, hover effects and onClick interactions were still visible and functional on components underneath my modal and modal background. After a ton of research, it seems like my modal z-index is limited by where its being rendered within the HTML. Going to try to solve this tomorrow by lifting the modal component up to the app level and creating more state to render characters correctly within. Frick!

--- a/front-end/distribution/style.css
+++ b/front-end/distribution/style.css
@@ -273,10 +273,12 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.9); 
+  pointer-events: none;
 }
 
 .characterModalContainer {
-  position: absolute;
+  z-index: 4;
+  position: fixed;
   top: 50%;
   left: 50%;
   background-color: white;
@@ -287,6 +289,7 @@ body {
 }
 
 .characterModal {
+  z-index: 4;
   position: relative;
   height: 100%;
   width: 100%;
@@ -300,6 +303,28 @@ body {
     0 0.12em black,
     -0.12em 0 black,
     0 -0.12em black;
+}
+
+.characterModalCloseButton {
+  z-index: 4;
+  height: 4em;
+  width: 4em;
+  border-radius: 10%;
+  position: absolute;
+  top: 0;
+  right: 0;
+  background-image: url('./images/Close-Icon.png');
+  background-size: cover;
+  opacity: 0;
+  transition: opacity 0.3s ease;
+}
+
+.characterModal:hover .characterModalCloseButton {
+  opacity: 0.5;
+}
+
+.characterModalCloseButton {
+ opacity: 1;
 }
 
 .characterModalName {
